Mensagens informativas para usuarios

--- a/application/views/scripts/projetos/novo.phtml
+++ b/application/views/scripts/projetos/novo.phtml
@@ -3,7 +3,7 @@
 if ($this->mensagemErro) { 
 ?>
 <p><?=$this->mensagemErro?></p>
-<a href='/projetos/listar' title="OK">OK</a>
+<a href='/projetos/listar' title="Voltar">Voltar</a>
 <?php
 } else { 
 ?>
