--- a/application/views/scripts/usuarios/remover.phtml
+++ b/application/views/scripts/usuarios/remover.phtml
@@ -2,7 +2,7 @@
 if ($this->mensagemErro) { 
 ?>
 <p><?=$this->mensagemErro?></p>
-<a href='/projetos/listar' title="Voltar">Voltar</a>
+<a href='/usuarios/listar' title="Voltar">Voltar</a>
 <?php
 }
 ?>
