--- a/public/css/detalharProjeto.css
+++ b/public/css/detalharProjeto.css
@@ -100,3 +100,17 @@ b {
     float: right;
 }
 
+#paginacao {
+    float: left;
+    font:bold 12px Arial;
+}
+
+#paginacao a {
+     text-decoration: none;
+     color: #5B75DE;
+}
+
+#paginacao a:active {
+     text-decoration: none;
+}
+
