Páginas Relatórios - Concluída.

--- a/application/views/scripts/projetos/listar.phtml
+++ b/application/views/scripts/projetos/listar.phtml
@@ -29,7 +29,7 @@
                     )
                     ); 
             ?>" 
-            title="Remover"><img src="/imagens/desalocar.png"/>
+            title="Detalhar"><img src="/imagens/Actions-dialog-ok-apply-icon.png"/>
             </a></li>
            <li><a href="
             <?php 
@@ -39,7 +39,7 @@
                     )
                     ); 
             ?>" 
-            title="Detalhar"><img src="/imagens/edit.png"/>
+            title="Editar"><img src="/imagens/edit.png"/>
             </a></li>
     
             <li><a href="
@@ -50,7 +50,7 @@
                     )
                     ); 
             ?>" 
-            title="Editar"><img src="/imagens/delete-icon.png"/>
+            title="Remover"><img src="/imagens/delete-icon.png"/>
             </a><li>
     
             <li><a href="
