--- a/application/views/scripts/projetos/relatorio-colaborador.phtml
+++ b/application/views/scripts/projetos/relatorio-colaborador.phtml
@@ -1,8 +1,17 @@
-<table border="1">
+<?php echo $this->headLink()->appendStylesheet('/css/telaGrafico.css');
+      echo $this->headScript()->appendFile('/js/jquery-1.7.2.js');
+      echo $this->headScript()->appendFile('/js/layoutTabela.js');
+?>
+
+<div type="button" id="botaoCad">
+        <a href="#" title="Imprimir">Imprimir</a>
+</div>
+
+<table id="tabela">
     <tr>
-        <td>Nome Usuario</td>
-        <td>Nome Projeto</td>
-        <td>Produtividade (tempo)</td>
+        <th>Nome Usuario</th>
+        <th>Nome Projeto</th>
+        <th>Produtividade (tempo)</th>
     </tr>
     <?php
     foreach ($this->vRelatorioCol as $relatorio):
@@ -24,3 +33,4 @@
     endforeach;
     ?>
 </table>
+
