--- a/application/views/scripts/projetos/alocar-usuario-tarefa.phtml
+++ b/application/views/scripts/projetos/alocar-usuario-tarefa.phtml
@@ -1,4 +1,12 @@
-<form action="alocar-usuario-tarefa" method="post">
+<?php
+if ($this->mensagemErro) { 
+?>
+<p><?=$this->mensagemErro?></p>
+<a href='/projetos/listar-tarefas/idprojeto/<?=$this->tarefa->idprojeto?>/' title="Voltar">Voltar</a>
+<?php
+} else {
+?>
+<form action="alocar-usuario-tarefa/idprojeto/<?=$this->tarefa->idprojeto?>/" method="post">
     <input type="hidden" name="idtarefa" value="<?= $this->tarefa->idtarefa ?>" />
     <input type="hidden" name="idprojeto" value="<?= $this->tarefa->idprojeto ?>" />
     <label>Nome do Usuario: 
@@ -17,3 +25,6 @@
         </select>     
     <input type="submit" value="Cadastrar" />
 </form>
+<?php
+}
+?>
