--- a/application/views/scripts/projetos/listar.phtml
+++ b/application/views/scripts/projetos/listar.phtml
@@ -67,7 +67,7 @@
             <li><a href="
                 <?php 
                 echo $this->url(array('controller' => 'projetos', 
-                                    'action'     => 'alocar', 
+                                    'action'     => 'alocar-colaborador', 
                                     'idprojeto' => $projeto->idprojeto
                         )
                         ); 
@@ -78,7 +78,7 @@
             <li><a href="
             <?php 
             echo $this->url(array('controller' => 'projetos', 
-                                  'action'     => 'desalocar', 
+                                  'action'     => 'desalocar-colaborador', 
                                   'idprojeto' => $projeto->idprojeto
                     )
                     ); 
