--- a/application/views/scripts/projetos/editar.phtml
+++ b/application/views/scripts/projetos/editar.phtml
@@ -1,3 +1,5 @@
+<?php echo $this->headLink()->appendStylesheet('/css/cadastroProjeto.css');?>
+
 <?php
 if ($this->mensagemErro): 
     echo $this->mensagemErro;
@@ -7,14 +9,16 @@ if ($this->mensagemErro):
 else :
 ?>
 
-<form action="editar" method="post">
-    <input type="hidden" name="idProjeto" value="<?= $this->projeto->idprojeto ?>" />
-    <input type="hidden" name="idRepositorio" value="<?= $this->repositorio->idrepositorio ?>" />
+<form action="novo" method="post">
+    <fieldset id="pessoal">
+        <legend>Informa&ccedil;&otilde;es Gerais</legend>
+            <input type="hidden" name="idProjeto" value="<?= $this->projeto->idprojeto ?>" />
+            <input type="hidden" name="idRepositorio" value="<?= $this->repositorio->idrepositorio ?>" />
     
-    <label>Nome: 
-        <input type="text" id="nome" name="nome" value="<?= $this->projeto->nome ?>" />
-    </label>
-    <br />
+            <label>Nome do Projeto: 
+                <input type="text" id="nome" name="nome"size="60px" /><br/>
+            </label><br />
+
     <label>Descrição: 
         <input type="text" id="descricao" name="descricao" value="<?= $this->projeto->descricao ?>" />
     </label>
@@ -33,6 +37,7 @@ else :
     <br />
     
     <input type="submit" value="Atualizar" />
+    </fieldset>
 </form>
 
 <?php
