Layout - Editar Tarefas .

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -8,8 +8,6 @@
     <link rel="stylesheet" type="text/css" href="/css/geral.css" />
     <link rel="icon" href="/imagens/favicon.ico" type="image/x-icon" sizes="16x16" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    
-    
   </head>
 
     <body>
@@ -22,7 +20,13 @@
                     <a href="#"><img src="/imagens/United-States-of-Americ-icon.png"/></a>
                     <a href="#"><img src="/imagens/Spain-icon.png"/></a>
             </div>
-        </div>
+            
+            <div id="acess">
+                <a href="#"><img src="/imagens/contrast-high-icon.png"/></a>
+                <a href="#"><img src="/imagens/contrast-increase-icon.png"/></a>
+                <a href="#"><img src="/imagens/font-add-icon.png"/></a>
+                <a href="#"><img src="/imagens/font-delete-icon.png"/></a>
+            </div>
 
 
 
@@ -54,6 +58,13 @@
                             <ul>
                                     <li><a href="#nogo">Nova</a></li>
                                     <li><a href="#nogo">Entrada</a></li>
+                            </ul>
+                    </li>
+                    <li><a href="telaMensagens.html">Suporte</a>
+                            <ul>
+                                    <li><a href="#nogo">FAQs</a></li>
+                                    <li><a href="#nogo">Contato</a></li>
+                                    <li><a href="#nogo">Manual</a></li>
                             </ul>
                     </li>
                 </ul>
